--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "markdown-to-jsx": "^6.11.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-material-ui-carousel": "^1.2.1",
     "react-scripts": "3.4.1",
     "typeface-roboto": "0.0.75"
   },
