--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-material-ui-carousel": "^1.2.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typeface-roboto": "0.0.75"
   },
