--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
     ],
     "rules": {
         "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/prop-types": "off",
         "no-console": "off"
     }
 }
