--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "markdown-to-jsx": "^6.11.1",
     "prop-types": "^15.7.2",
     "query-string": "^6.12.1",
