--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-game-snake": "^1.0.4",
     "react-markdown": "^4.3.1",
     "react-material-ui-carousel": "^1.2.1",
     "react-router-dom": "^5.1.2",
